--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-router": "^1.116.0",
     "@tanstack/react-table": "^8.21.3",
+    "@types/crypto-js": "^4.2.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
